Add Braille to fontconfig

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -30,6 +30,7 @@
 		<prefer>
 			<family>Fira Code</family>
 			<family>Liberation Mono</family>
+			<family>Braille</family>
 		</prefer>
 	</alias>
 </fontconfig>
